task_1/hello-svc-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-svc-2
  namespace: mesh-test
  labels:
    name: hello-svc-2
    app: demo-istio
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: index-web-pod-2
      app: demo-istio
      version: v2
  template:
    metadata:
      name: index-web-pod-2
      labels:
        name: index-web-pod-2
        app: demo-istio
        version: v2
    spec:
      containers:
      - name: index-web-container02
        image: sumuduliyan/service-2
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
