task_1/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio
  namespace: mesh-test
spec:
  hosts:
  - 35.188.187.188.nip.io
  gateways:
  - myservice-gateway
  http:
  - route:
      - destination:
          host: demo-istio
          subset: v1
        weight: 10
      - destination:
          host: demo-istio
          subset: v2
        weight: 90
